--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "social-network-api",
   "description": "18 - NoSQL",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
